added smart scraper and scraped data for bharati website

--- a/index.html
+++ b/index.html
@@ -228,11 +228,8 @@
     <!-- Chatbot Widget -->
     <script src="config.js"></script>
     <script src="knowledge-base.js"></script>
+    <script src="rag-client.js"></script>
     <script src="chatbot.js"></script>
 </body>
 
-<<<<<<< HEAD
 </html>
-=======
-</html>
->>>>>>> 5c6021c (Rename college-website.html to index.html for GitHub Pages)
