Changed website from St.Xavier's to Bharati College

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>St. Xavier's College - Excellence in Education</title>
+    <title>Bharati College - University of Delhi</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -13,10 +13,10 @@
     <header class="header">
         <div class="container">
             <div class="logo-section">
-                <div class="logo-placeholder">SXC</div>
+                <div class="logo-placeholder">BC</div>
                 <div class="college-info">
-                    <h1>St. Xavier's College</h1>
-                    <p class="tagline">Excellence in Education Since 1965</p>
+                    <h1>Bharati College</h1>
+                    <p class="tagline">University of Delhi</p>
                 </div>
             </div>
             <nav class="main-nav">
@@ -220,8 +220,8 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2025 St. Xavier's College. All rights reserved.</p>
-            <p>Affiliated to University of Delhi | Accredited by NAAC with 'A' Grade</p>
+            <p>&copy; 2025 Bharati College. All rights reserved.</p>
+            <p>University of Delhi | Accredited by NAAC</p>
         </div>
     </footer>
 
