Changed to Bharati College

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- Hero Section -->
     <section class="hero" id="home">
         <div class="hero-content">
-            <h2>Welcome to St. Xavier's College</h2>
+            <h2>Welcome to Bharati College</h2>
             <p>Empowering minds, shaping futures</p>
             <div class="hero-buttons">
                 <a href="#admissions" class="btn btn-primary">Apply Now</a>
@@ -50,27 +50,26 @@
             <h2 class="section-title">About Us</h2>
             <div class="about-content">
                 <div class="about-text">
-                    <p>St. Xavier's College, established in 1965, is a premier institution affiliated with Delhi
-                        University. We are committed to providing quality education and fostering holistic development
-                        of our students.</p>
-                    <p>With state-of-the-art infrastructure, experienced faculty, and a vibrant campus life, we have
-                        been consistently ranked among the top colleges in India.</p>
+                    <p>Bharati College, a constituent college of the University of Delhi, is committed to providing
+                        quality education and fostering holistic development of our students.</p>
+                    <p>With experienced faculty, modern infrastructure, and a vibrant campus life, we strive for
+                        academic excellence and overall personality development.</p>
                     <div class="stats">
                         <div class="stat-item">
-                            <h3>5000+</h3>
+                            <h3>2000+</h3>
                             <p>Students</p>
                         </div>
                         <div class="stat-item">
-                            <h3>200+</h3>
+                            <h3>100+</h3>
                             <p>Faculty Members</p>
                         </div>
                         <div class="stat-item">
-                            <h3>50+</h3>
-                            <p>Years of Excellence</p>
+                            <h3>NAAC</h3>
+                            <p>Accredited</p>
                         </div>
                         <div class="stat-item">
-                            <h3>95%</h3>
-                            <p>Placement Rate</p>
+                            <h3>DU</h3>
+                            <p>Affiliated</p>
                         </div>
                     </div>
                 </div>
@@ -84,43 +83,34 @@
             <h2 class="section-title">Our Courses</h2>
             <div class="courses-grid">
                 <div class="course-card">
-                    <h3>B.A. (Hons) English</h3>
+                    <h3>B.A. (Hons) Hindi</h3>
                     <p>Duration: 3 Years</p>
-                    <p>Seats: 120</p>
-                    <p>Comprehensive study of English literature and language with career opportunities in media,
-                        publishing, and education.</p>
+                    <p>Comprehensive study of Hindi literature and language.</p>
                 </div>
                 <div class="course-card">
-                    <h3>B.Sc. (Hons) Computer Science</h3>
+                    <h3>B.A. (Hons) English</h3>
                     <p>Duration: 3 Years</p>
-                    <p>Seats: 80</p>
-                    <p>Advanced computer science curriculum covering programming, algorithms, AI, and software
-                        development.</p>
+                    <p>Study of English literature and language with diverse career opportunities.</p>
                 </div>
                 <div class="course-card">
                     <h3>B.Com (Hons)</h3>
                     <p>Duration: 3 Years</p>
-                    <p>Seats: 150</p>
-                    <p>Commerce education with focus on accounting, finance, taxation, and business management.</p>
+                    <p>Commerce education with focus on accounting, finance, and business management.</p>
                 </div>
                 <div class="course-card">
-                    <h3>B.A. (Hons) Economics</h3>
+                    <h3>B.A. (Hons) History</h3>
                     <p>Duration: 3 Years</p>
-                    <p>Seats: 100</p>
-                    <p>Study of economic theory, policy analysis, and quantitative methods with excellent career
-                        prospects.</p>
+                    <p>Study of historical events, civilizations, and their impact on modern society.</p>
                 </div>
                 <div class="course-card">
-                    <h3>B.Sc. (Hons) Mathematics</h3>
+                    <h3>B.A. (Hons) Political Science</h3>
                     <p>Duration: 3 Years</p>
-                    <p>Seats: 60</p>
-                    <p>Advanced mathematics curriculum covering pure and applied mathematics.</p>
+                    <p>Study of political systems, governance, and public policy.</p>
                 </div>
                 <div class="course-card">
-                    <h3>B.A. (Hons) Psychology</h3>
+                    <h3>B.A. Programme</h3>
                     <p>Duration: 3 Years</p>
-                    <p>Seats: 80</p>
-                    <p>Comprehensive psychology program with practical training and research opportunities.</p>
+                    <p>Flexible program with various subject combinations available.</p>
                 </div>
             </div>
         </div>
@@ -164,27 +154,27 @@
             <div class="facilities-grid">
                 <div class="facility-item">
                     <h3>📚 Library</h3>
-                    <p>Modern library with over 100,000 books, journals, and digital resources</p>
+                    <p>Well-stocked library with books, journals, and digital resources</p>
                 </div>
                 <div class="facility-item">
                     <h3>💻 Computer Labs</h3>
-                    <p>Well-equipped labs with latest technology and high-speed internet</p>
+                    <p>Computer labs with internet connectivity for students</p>
                 </div>
                 <div class="facility-item">
-                    <h3>🏋️ Sports Complex</h3>
-                    <p>Indoor and outdoor sports facilities including gym, basketball, and cricket</p>
+                    <h3>🏋️ Sports Facilities</h3>
+                    <p>Indoor and outdoor sports facilities for various games</p>
                 </div>
                 <div class="facility-item">
-                    <h3>🎭 Auditorium</h3>
-                    <p>State-of-the-art auditorium for cultural events and seminars</p>
+                    <h3>🎭 Seminar Halls</h3>
+                    <p>Modern seminar halls for academic events and cultural activities</p>
                 </div>
                 <div class="facility-item">
-                    <h3>🍽️ Cafeteria</h3>
-                    <p>Hygienic cafeteria serving nutritious meals and snacks</p>
+                    <h3>🍽️ Canteen</h3>
+                    <p>College canteen providing meals and refreshments</p>
                 </div>
                 <div class="facility-item">
-                    <h3>🚌 Transport</h3>
-                    <p>College bus service covering major routes across the city</p>
+                    <h3>📖 Study Rooms</h3>
+                    <p>Dedicated study spaces for students</p>
                 </div>
             </div>
         </div>
@@ -197,17 +187,17 @@
             <div class="contact-content">
                 <div class="contact-info">
                     <h3>Address</h3>
-                    <p>St. Xavier's College<br>
-                        Rajpur Road, Civil Lines<br>
-                        New Delhi - 110054<br>
+                    <p>Bharati College<br>
+                        C-4, Janakpuri<br>
+                        New Delhi - 110058<br>
                         India</p>
 
                     <h3>Phone</h3>
-                    <p>+91-11-2397-XXXX</p>
+                    <p>+91-11-2555-4011</p>
 
                     <h3>Email</h3>
-                    <p>info@stxaviers.edu.in<br>
-                        admissions@stxaviers.edu.in</p>
+                    <p>principal@bharaticollege.du.ac.in<br>
+                        info@bharaticollege.du.ac.in</p>
 
                     <h3>Office Hours</h3>
                     <p>Monday - Friday: 9:00 AM - 5:00 PM<br>
